// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`单选模式 1`] = `
<div>
  <div
    class=""
  >
    <input
      class="corn-checkbox-group-hide"
      data-testid="check"
      readonly=""
      value="\\"4\\""
    />
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        name=""
        readonly=""
        value="1"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
        />
      </div>
      选项1
    </div>
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        name=""
        readonly=""
        value="2"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
        />
      </div>
      选项2
    </div>
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        name=""
        readonly=""
        value="3"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
        />
      </div>
      选项3
    </div>
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        name=""
        readonly=""
        value="4"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/97f184d7-4fda-43f1-bd56-8313ee8a2b94.png"
        />
      </div>
      选项4
    </div>
  </div>
</div>
`;

exports[`取消选中 1`] = `
<div>
  <div
    class=""
  >
    <input
      class="corn-checkbox-group-hide"
      data-testid="check"
      readonly=""
      value="[]"
    />
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        name=""
        readonly=""
        value="1"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
        />
      </div>
      选项1
    </div>
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        name=""
        readonly=""
        value="2"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
        />
      </div>
      选项2
    </div>
  </div>
</div>
`;

exports[`取消选中 和默认值 1`] = `
<div>
  <div
    class=""
  >
    <input
      class="corn-checkbox-group-hide"
      data-testid="check"
      readonly=""
      value="[]"
    />
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        name=""
        readonly=""
        value="1"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
        />
      </div>
      选项1
    </div>
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        name=""
        readonly=""
        value="2"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
        />
      </div>
      选项2
    </div>
  </div>
</div>
`;

exports[`基本使用 1`] = `
<div>
  <div
    class=""
  >
    <input
      class="corn-checkbox-group-hide"
      data-testid="check"
      readonly=""
      value="[]"
    />
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        name=""
        readonly=""
        value="1"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
        />
      </div>
      选项1
    </div>
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        name=""
        readonly=""
        value="2"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
        />
      </div>
      选项2
    </div>
  </div>
</div>
`;

exports[`选中 1`] = `
<div>
  <div
    class=""
  >
    <input
      class="corn-checkbox-group-hide"
      data-testid="check"
      readonly=""
      value="[\\"1\\",\\"2\\"]"
    />
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        name=""
        readonly=""
        value="1"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/97f184d7-4fda-43f1-bd56-8313ee8a2b94.png"
        />
      </div>
      选项1
    </div>
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        name=""
        readonly=""
        value="2"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/97f184d7-4fda-43f1-bd56-8313ee8a2b94.png"
        />
      </div>
      选项2
    </div>
  </div>
</div>
`;
